tests/testcases/invalid/semantic/67_this_assignment_not_allowed.ciel
// Error: Attempting to assign to 'this' pointer

class MyClass {
    public:
        int value;

        void reset(class MyClass* other) {
            this = other;  // Error: Cannot assign to 'this'
            return;
        }
};

int main() {
    class MyClass obj1;
    class MyClass obj2;
    obj1.value = 10;
    obj2.value = 20;
    obj1.reset(&obj2);
    return 0;
}
